[tool.poetry]
name = "availability-checker"
version = "0.1.0"
description = "Function that returns the real-time availability of professionals, updating based on current activity or schedule."
authors = ["AutoGPT <info@agpt.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
bcrypt = "^3.2.0"
fastapi = "*"
google-api-python-client = "*"
google-auth-httplib2 = "*"
google-auth-oauthlib = "*"
httpx = "^0.23.0"
passlib = "^1.7.4"
prisma = "*"
pydantic = "*"
uvicorn = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
